2007-02-15  John W. Eaton  <jwe@octave.org>

	* path/addpath.m, path/rmpath.m: Delete
	* path/Makefile.in (SOURCES): Remove them from the list.

	* plot/__uiobject_axes_init__.in, plot/__uiobject_axes_setr__.m:
	Delete title, xlabel, ylabel, and zlabel properties before
	reassigning.
	* plot/__uiobject_axes_init__.in: New arg, mode.
	Don't init outerposition if "mode" is "replace".
	* plot/newplot.m: Check both figure and axes nextplot properties.
	If axes nextplot property is replace, pass "replace" as mode arg
	to __uiobject_axes_init__.

2007-02-15  Daniel J Sebald  <daniel.sebald@ieee.org>

	* image/imshow.m: Don't restore old colormap.

	* plot/__uiobject_image_ctor__.m: Set xdata and ydata properties.
	* image/__img__.m: New file containing common parts of image.m and
	imshow.m.
	* image/Makefile.in (SOURCES): Add __img__.m to the list.
	* image/image.m, image/imshow.m: Call __img__.
	* plot/__uiobject_draw_axes__.m:
	Handle rgb imaged data stored in 3-d arrays.

	* plot/figure.m: Doc fix.

2007-02-14  Thomas Weber  <thomas.weber.mail@gmail.com>

	* audio/wavread.m, audio/wavwrite.m: Use types with specific sizes
	for reading and writing data.  New tests.  Improve rounding.

2007-02-13  John W. Eaton  <jwe@octave.org>

	* plot/stem.m: New file, adapted from OctPlot.
	* plot/Makefile.in (SOURCES_M): Add it to the list.

	* plot/__errcomm__.m, plot/__plr1__.m, plot/__plr2__.m,
	plot/__plt1__.m, plot/__plt2__.m, plot/__plt2mm__.m,
	plot/__plt2mv__.m, plot/__plt2ss__.m, plot/__plt2vm__.m,
	plot/__plt2vv__.m, plot/__plt__.m, plot/loglog.m,
	plot/loglogerr.m, plot/plot.m, plot/plot3.m, plot/polar.m,
	plot/semilogx.m, plot/semilogxerr.m, plot/semilogy.m,
	plot/semilogyerr.m: Return handles to line objects.

2007-02-11  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_close_all.m: New file.
	* plot/Makefile.in (SOURCES_M): Add it to the list.

2007-02-10  John W. Eaton  <jwe@octave.org>

	* plot/drawnow.m: Arrange for plot streams to be close on exit.