@@ -1,3 +1,7 @@
+2007-02-16  Muthiah Annamalai  <muthuspost@gmail.com>
+
+	* specfun/nchoosek.m: Check nargin.
+
 2007-02-15  John W. Eaton  <jwe@octave.org>
 
 	* path/addpath.m, path/rmpath.m: Delete
